style: fix header icon alignment

--- a/index.css
+++ b/index.css
@@ -101,13 +101,11 @@ header h1 {
 
 header .left-icons {
   padding-left: .5rem;
-  max-height: 100%;
   display: flex;
 }
 
 header .right-icons {
   padding-right: .5rem;
-  max-height: 100%;
   display: flex;
 }
 
